fixed extra padding and headings

--- a/intotheverse/src/components/Metaverse/PartnersandInvestors/PartnersandInvestors.scss
+++ b/intotheverse/src/components/Metaverse/PartnersandInvestors/PartnersandInvestors.scss
@@ -26,7 +26,7 @@ body {
         justify-content: center;
         z-index: 1000;
         align-items: center;
-        padding-top: 10em;
+        padding-top: 3em;
         &__highlightText {
             color:#8C5AE0;
         }
